Essai d'intégration des différentes parties